Add mlock support and public LoadResult API
- Add INDEX_MLOCK, LOG_MLOCK, ALL_MLOCK to LoadMode enum
- Parametrize LoadMode with Action { NONE, LOAD, MLOCK }
- Implement mlock(2) via FFM on Java 22+ (MlockSupport.java)
- Add mlockPages() to BlockRandomInput and all implementations
- Make LoadResult.completed(), create(), combine() public
- Carry locked state in CompletableFuture<Boolean> internally
- Add locked(), lockedFuture(), toCompletableFuture() accessors
- Add --enable-native-access=ALL-UNNAMED to surefire config
- Document mlock requirements in SparkeyReader.load() javadoc
- Add LoadModeTest with 12 tests covering all combinations

MLOCK modes fall back silently to advisory prefetch when:
- Java < 22 (no FFM API)
- --enable-native-access flag missing
- Insufficient ulimit -l or CAP_IPC_LOCK

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>